# tidyer

./: frames_2026-05-04_21.20.49.gv  frames_2026-05-04_21.29.47.gv  package.xml  setup.cfg  setup.py
docs/: index.html
docs/assets/: style.css
docs/static/css/: index.css
launch/: tidyer_bringup.launch.py
tidyer/perception/: process_pointcloud.py
tidyer/planning/: ik.py  keyboard_trigger.py  main.py  static_tf_transform.py
